--- a/app/assets/stylesheets/travel_admin/shared/admin.css
+++ b/app/assets/stylesheets/travel_admin/shared/admin.css
@@ -2,7 +2,7 @@
     clear: both;
 }
 
-.modal-body {background-color: #d9e0e7;}
+.modal-body {background-color: #f0f3f5;}
 
 #tab1, #tab2, #tab3 {
     height: 320px;
