--- a/app/views/travel_admin/companies/_row.html.haml
+++ b/app/views/travel_admin/companies/_row.html.haml
@@ -6,7 +6,7 @@
 %td= row.icon_url
 %td= row.website
 %td.cell-middle
-  .btn-group
+  .btn-group.btn-group-sm
     = row_link_to_edit row
     = row_link_to_photo company_photos_path(row)
     = row_link_to_hide row
