--- a/app/views/travel_admin/destinations/_form.html.haml
+++ b/app/views/travel_admin/destinations/_form.html.haml
@@ -1,5 +1,5 @@
 - @object.build_description if @object.new_record?
-.modal-dialog
+.modal-dialog.modal-lg
   .modal-content
     .modal-header
       %button.close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button"} &times;
