--- a/app/views/travel_admin/employee_infos/_form.html.haml
+++ b/app/views/travel_admin/employee_infos/_form.html.haml
@@ -1,38 +1,22 @@
-.modal-header
-  %button.close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button"} ×
-  %h3#myModalLabel
-    Edit Employee info# #{@object.id}
-.modal-body
-  = form_for( @object, :remote => true) do |f|
-    .row
-      .span4
-        = f.field_container :company_id do
-          = f.label :company_id
-          = f.select :company_id, Company.all.map { |c| [c.short_name, c.id] }, {}, :class => 'data-field'
-        = f.field_container :nickname do
-          Employee name
-          \#{f.text_field :nickname}
-      .span4
-        Telephones:
-        \#{add_object_js_link 'Add', f, :telephones, 'travel_admin/user_infos/form_tel', '#tels'}
-        %br/
-        #tels
-          = f.fields_for :telephones do |tel_form|
-            = render :partial => 'travel_admin/user_infos/form_tel', :locals => { :f => tel_form}
-        %hr/
-        Emails:
-        \#{add_object_js_link 'Add', f, :emails, 'travel_admin/user_infos/form_email', '#emails'}
-        %br/
-        #emails
-          = f.fields_for :emails do |email_form|
-            = render :partial => 'travel_admin/user_infos/form_email', :locals => { :f => email_form}
-        %hr/
-        Addresses:
-        \#{add_object_js_link 'Add', f, :addresses, 'travel_admin/user_infos/form_address', '#addresses'}
-        %br/
-        #addresses
-          = f.fields_for :addresses do |adr_form|
-            = render :partial => 'travel_admin/user_infos/form_address', :locals => { :f => adr_form}
-.modal-footer
-  %button.btn{"aria-hidden" => "true", "data-dismiss" => "modal"} Close
-  %button.btn.btn-primary{:onclick => "submit_dialog_form(this)"} Save changes
+.modal-dialog
+  .modal-content
+    .modal-header
+      %button.close{"aria-hidden" => "true", "data-dismiss" => "modal", :type => "button"} &times;
+      %h4.modal-title
+        Edit Employee info# #{@object.id}
+    .modal-body
+      = simple_form_for( @object, :remote => true) do |f|
+        = f.association :company
+        = f.input :nickname
+        = f.input :telephone
+        = f.input :email
+        = f.input :address
+
+        = f.input :ssn
+        = f.input :birthday
+        = f.input :employ_date
+        = f.submit class: 'hidden'
+    .modal-footer
+      %button.btn.btn-default{"data-dismiss" => "modal"} Close
+      %button.btn.btn-primary{:onclick => "submit_dialog_form(this)"} Save changes
+
